# Orderbooook

./: README.md  cargo.toml
engine-core/: Cargo.toml
engine-core/src/: engine.rs  error.rs  lib.rs  tests.rs
engine-core/src/orderbook/: mod.rs  orderbook.rs  price_levels.rs  types.rs
gateway/: Cargo.toml
gateway/src/: main.rs
market-data/: Cargo.toml
market-data/src/: pipeline.rs  types.rs
market-data/src/publisher/: mod.rs  publisher.rs  redis.rs
net/: Cargo.toml
net/src/http/: app.rs  lib.rs  mod.rs
net/src/http/handlers/: mod.rs  orders.rs
net/src/http/models/: orders.rs
net/src/http/routes/: mod.rs
persistence/: Cargo.toml
persistence/src/: error.rs  lib.rs  models.rs  scylla_db.rs  writer.rs
protocol/: Cargo.toml
protocol/src/: lib.rs  types.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
