[package]
name = "engine-core"
version = "0.1.0"
edition = "2024"

[dependencies]
oneshot = { workspace = true }
tokio = { workspace = true }
protocol = { path = "../protocol" }
runtime = { path = "../runtime" }
crossbeam-channel = { workspace = true }
chrono = "0.4.42"
thiserror = "2.0.17"
net = { path = "../net" }
