[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
runtime = { path = "../runtime" }
protocol = { path = "../protocol" }
engine-core = { path = "../engine-core" }
tokio = { workspace = true }
crossbeam-channel = { workspace = true }
net = { path = "../net" }
ctrlc = "3.5.1"
oneshot = { workspace = true }
market-data = { path = "../market-data" }
