[package]
name = "market-data"
version = "0.1.0"
edition = "2024"

[dependencies]
protocol = { path = "../protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }
chrono = "0.4.42"
redis = { version = "1.0.0", features = [
    "json",
    "tokio-comp",
    "r2d2",
    "connection-manager",
] }
r2d2_redis = "0.14.0"
