[package]
name = "net"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { workspace = true }
tokio-tungstenite = "0.28"
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }
protocol = { path = "../protocol" }
runtime = { path = "../runtime" }
thiserror = "2.0.17"
futures-util = "0.3"
actix-web = "4.12.1"
oneshot = { workspace = true }
