[package]
name = "persistence"
version = "0.1.0"
edition = "2024"

[dependencies]
scylla = "1.4.1"
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
crossbeam-channel = { workspace = true }
protocol = { path = "../protocol" }
thiserror = "2.0.17"
chrono = "0.4.42"
